2017-06-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Implement API::IconLoadingClient and rework WebKitFaviconDatabase to use IconDatabase directly
        https://bugs.webkit.org/show_bug.cgi?id=173877

        Reviewed by Brady Eidson.

        This way IconDatabase and its related classes can be removed from WebCore, as well as the WebKit2 implementation
        and C API. For now I've copied IconDatabase from WebCore to WebKit2 under the glib API directory, adding the
        related classes as private inside IconDatabase, and removing some methods that are not used by the GLib API.

        * PlatformGTK.cmake:
        * UIProcess/API/glib/IconDatabase.cpp: Added.
        (WebKit::urlForLogging):
        (WebKit::defaultClient):
        (WebKit::IconDatabase::IconRecord::IconRecord):
        (WebKit::IconDatabase::IconRecord::~IconRecord):
        (WebKit::IconDatabase::IconRecord::image):
        (WebKit::IconDatabase::IconRecord::setImageData):
        (WebKit::IconDatabase::IconRecord::loadImageFromResource):
        (WebKit::IconDatabase::IconRecord::imageDataStatus):
        (WebKit::IconDatabase::IconRecord::snapshot):
        (WebKit::IconDatabase::PageURLRecord::PageURLRecord):
        (WebKit::IconDatabase::PageURLRecord::~PageURLRecord):
        (WebKit::IconDatabase::PageURLRecord::setIconRecord):
        (WebKit::IconDatabase::PageURLRecord::snapshot):
        (WebKit::IconDatabase::setClient):
        (WebKit::IconDatabase::open):
        (WebKit::IconDatabase::close):
        (WebKit::IconDatabase::removeAllIcons):
        (WebKit::documentCanHaveIcon):
        (WebKit::IconDatabase::synchronousIconForPageURL):
        (WebKit::IconDatabase::synchronousIconURLForPageURL):
        (WebKit::IconDatabase::retainIconForPageURL):
        (WebKit::IconDatabase::performRetainIconForPageURL):
        (WebKit::IconDatabase::releaseIconForPageURL):
        (WebKit::IconDatabase::performReleaseIconForPageURL):